--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="Capture3.png" alt="random picture"></td>
+      <td><img src="Capture3.PNG" alt="random picture"></td>
       <td>
         <h1>ZK</h1>
         <p><em><strong>Potato</strong></em></p>
